// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exact 1`] = `
Array [
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "children": Array [
          Object {
            "access": "canAdmin",
            "exact": true,
            "key": "/admin/sub-page/list",
            "locale": "menu.admin.sub-page.sub-page-list",
            "name": "三级管理页",
            "path": "/admin/sub-page/list",
            "pro_layout_parentKeys": Array [
              "/admin",
              "/admin/sub-page",
            ],
            "unaccessible": false,
          },
        ],
        "exact": true,
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "path": "/admin/sub-page",
        "pro_layout_parentKeys": Array [
          "/admin",
        ],
        "unaccessible": false,
      },
    ],
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
  },
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "exact": true,
        "key": "/admin/sub-page/list",
        "locale": "menu.admin.sub-page.sub-page-list",
        "name": "三级管理页",
        "path": "/admin/sub-page/list",
        "pro_layout_parentKeys": Array [
          "/admin",
          "/admin/sub-page",
        ],
        "unaccessible": false,
      },
    ],
    "exact": true,
    "key": "/admin/sub-page",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "path": "/admin/sub-page",
    "pro_layout_parentKeys": Array [
      "/admin",
    ],
    "unaccessible": false,
  },
  Object {
    "access": "canAdmin",
    "exact": true,
    "key": "/admin/sub-page/list",
    "locale": "menu.admin.sub-page.sub-page-list",
    "name": "三级管理页",
    "path": "/admin/sub-page/list",
    "pro_layout_parentKeys": Array [
      "/admin",
      "/admin/sub-page",
    ],
    "unaccessible": false,
  },
]
`;

exports[`normal 1`] = `
Array [
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "children": Array [
          Object {
            "access": "canAdmin",
            "exact": true,
            "key": "/admin/sub-page/list",
            "locale": "menu.admin.sub-page.sub-page-list",
            "name": "三级管理页",
            "path": "/admin/sub-page/list",
            "pro_layout_parentKeys": Array [
              "/admin",
              "/admin/sub-page",
            ],
            "unaccessible": false,
          },
        ],
        "exact": true,
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "path": "/admin/sub-page",
        "pro_layout_parentKeys": Array [
          "/admin",
        ],
        "unaccessible": false,
      },
    ],
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
  },
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "exact": true,
        "key": "/admin/sub-page/list",
        "locale": "menu.admin.sub-page.sub-page-list",
        "name": "三级管理页",
        "path": "/admin/sub-page/list",
        "pro_layout_parentKeys": Array [
          "/admin",
          "/admin/sub-page",
        ],
        "unaccessible": false,
      },
    ],
    "exact": true,
    "key": "/admin/sub-page",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "path": "/admin/sub-page",
    "pro_layout_parentKeys": Array [
      "/admin",
    ],
    "unaccessible": false,
  },
]
`;

exports[`test empty menu 1`] = `Array []`;

exports[`test layout config 1`] = `Array []`;

exports[`test morse layout config 1`] = `
Array [
  Object {
    "exact": true,
    "key": "/project/:projectId/strategy/data",
    "locale": false,
    "path": "/project/:projectId/strategy/data",
    "pro_layout_parentKeys": Array [
      "/project/:projectId/strategy/data",
    ],
    "redirect": "/project/:projectId/strategy/data/dataset",
  },
  Object {
    "component": Object {
      "displayName": "LoadableComponent",
    },
    "exact": true,
    "hasLayout": true,
    "hideInMenu": true,
    "key": "/project/:projectId/strategy/data/virtualDataSet/:sampleId",
    "locale": "menu.实验区.数据准备详情",
    "name": "数据准备详情",
    "path": "/project/:projectId/strategy/data/virtualDataSet/:sampleId",
    "pro_layout_parentKeys": Array [
      "/project/:projectId/strategy/data",
    ],
  },
]
`;

exports[`test pro_layout_parentKeys menu 1`] = `
Array [
  Object {
    "key": "/",
    "locale": "menu",
    "pro_layout_parentKeys": Array [
      "a",
      "a",
      "a",
    ],
  },
]
`;

exports[`test router 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "icon": Object {
          "_owner": null,
          "_store": Object {},
          "key": null,
          "props": Object {},
          "ref": null,
          "type": Object {},
        },
        "key": "/welcome",
        "locale": "menu.welcome.one",
        "name": "one",
        "path": "/welcome",
        "pro_layout_parentKeys": Array [
          "/",
          "welcome",
        ],
        "routes": Array [
          Object {
            "exact": true,
            "icon": Object {
              "_owner": null,
              "_store": Object {},
              "key": null,
              "props": Object {},
              "ref": null,
              "type": Object {},
            },
            "key": "/welcome/repertoryFw",
            "locale": "menu.welcome.one.two",
            "name": "two",
            "path": "/welcome/repertoryFw",
            "pro_layout_parentKeys": Array [
              "/",
              "welcome",
              "/welcome",
            ],
          },
          Object {
            "exact": true,
            "icon": Object {
              "_owner": null,
              "_store": Object {},
              "key": null,
              "props": Object {},
              "ref": null,
              "type": Object {},
            },
            "key": "/welcome/repertory",
            "locale": "menu.welcome.one.two2",
            "name": "two2",
            "path": "/welcome/repertory",
            "pro_layout_parentKeys": Array [
              "/",
              "welcome",
              "/welcome",
            ],
          },
        ],
      },
    ],
    "icon": Object {
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {},
      "ref": null,
      "type": Object {},
    },
    "key": "welcome",
    "locale": "menu.welcome",
    "name": "welcome",
    "path": "/",
    "pro_layout_parentKeys": Array [
      "/",
    ],
  },
  Object {
    "children": Array [
      Object {
        "icon": Object {
          "_owner": null,
          "_store": Object {},
          "key": null,
          "props": Object {},
          "ref": null,
          "type": Object {},
        },
        "key": "/welcome",
        "locale": "menu.welcome.one",
        "name": "one",
        "path": "/welcome",
        "pro_layout_parentKeys": Array [
          "/",
          "welcome",
        ],
        "routes": Array [
          Object {
            "exact": true,
            "icon": Object {
              "_owner": null,
              "_store": Object {},
              "key": null,
              "props": Object {},
              "ref": null,
              "type": Object {},
            },
            "key": "/welcome/repertoryFw",
            "locale": "menu.welcome.one.two",
            "name": "two",
            "path": "/welcome/repertoryFw",
            "pro_layout_parentKeys": Array [
              "/",
              "welcome",
              "/welcome",
            ],
          },
          Object {
            "exact": true,
            "icon": Object {
              "_owner": null,
              "_store": Object {},
              "key": null,
              "props": Object {},
              "ref": null,
              "type": Object {},
            },
            "key": "/welcome/repertory",
            "locale": "menu.welcome.one.two2",
            "name": "two2",
            "path": "/welcome/repertory",
            "pro_layout_parentKeys": Array [
              "/",
              "welcome",
              "/welcome",
            ],
          },
        ],
      },
    ],
    "icon": Object {
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {},
      "ref": null,
      "type": Object {},
    },
    "key": "welcome",
    "locale": "menu.welcome",
    "name": "welcome",
    "path": "/",
    "pro_layout_parentKeys": Array [
      "/",
    ],
  },
  Object {
    "children": Array [
      Object {
        "exact": true,
        "icon": Object {
          "_owner": null,
          "_store": Object {},
          "key": null,
          "props": Object {},
          "ref": null,
          "type": Object {},
        },
        "key": "/welcome/repertoryFw",
        "locale": "menu.welcome.one.two",
        "name": "two",
        "path": "/welcome/repertoryFw",
        "pro_layout_parentKeys": Array [
          "/",
          "welcome",
          "/welcome",
        ],
      },
      Object {
        "exact": true,
        "icon": Object {
          "_owner": null,
          "_store": Object {},
          "key": null,
          "props": Object {},
          "ref": null,
          "type": Object {},
        },
        "key": "/welcome/repertory",
        "locale": "menu.welcome.one.two2",
        "name": "two2",
        "path": "/welcome/repertory",
        "pro_layout_parentKeys": Array [
          "/",
          "welcome",
          "/welcome",
        ],
      },
    ],
    "icon": Object {
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {},
      "ref": null,
      "type": Object {},
    },
    "key": "/welcome",
    "locale": "menu.welcome.one",
    "name": "one",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [
      "/",
      "welcome",
    ],
  },
  Object {
    "exact": true,
    "icon": Object {
      "_owner": null,
      "_store": Object {},
      "key": null,
      "props": Object {},
      "ref": null,
      "type": Object {},
    },
    "key": "/welcome/repertoryFw",
    "locale": "menu.welcome.one.two",
    "name": "two",
    "path": "/welcome/repertoryFw",
    "pro_layout_parentKeys": Array [
      "/",
      "welcome",
      "/welcome",
    ],
  },
]
`;

exports[`test yfd layout config 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "exact": true,
        "key": "/yfd/bkmng/authority/my",
        "locale": "menu.我的权限.权限列表",
        "name": "权限列表",
        "path": "/bkmng/authority/my",
        "pro_layout_parentKeys": Array [
          "/yfd/bkmng/authority",
        ],
        "unaccessible": false,
      },
      Object {
        "exact": true,
        "key": "/yfd/bkmng/authority/apply",
        "locale": "menu.我的权限.申请权限",
        "name": "申请权限",
        "path": "/bkmng/authority/apply",
        "pro_layout_parentKeys": Array [
          "/yfd/bkmng/authority",
        ],
        "unaccessible": false,
      },
    ],
    "key": "/yfd/bkmng/authority",
    "locale": "menu.我的权限",
    "name": "我的权限",
    "path": "/bkmng/authority",
    "pro_layout_parentKeys": Array [],
    "unaccessible": false,
  },
  Object {
    "exact": true,
    "key": "/yfd/bkmng/authority/my",
    "locale": "menu.我的权限.权限列表",
    "name": "权限列表",
    "path": "/bkmng/authority/my",
    "pro_layout_parentKeys": Array [
      "/yfd/bkmng/authority",
    ],
    "unaccessible": false,
  },
]
`;

exports[`test_config_router2 1`] = `
Array [
  Object {
    "component": "./keyMangement/ExperienceScenario",
    "key": "/experienceScenario",
    "locale": "menu.name",
    "menuKey": "experienceScenario",
    "name": "name",
    "parentKey": "tool",
    "path": "/experienceScenario",
    "permission": "KM_WORKFLOW",
    "pro_layout_parentKeys": Array [],
  },
]
`;

exports[`test_layout_router 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "component": "./Welcome",
            "icon": "smile",
            "key": "/welcome/repertoryFw",
            "locale": "menu.welcome.one.two",
            "name": "two",
            "path": "/welcome/repertoryFw",
            "pro_layout_parentKeys": Array [
              "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
              "/welcome",
            ],
          },
          Object {
            "component": "./Welcome",
            "icon": "smile",
            "key": "/welcome/repertory",
            "locale": "menu.welcome.one.two2",
            "name": "two2",
            "path": "/welcome/repertory",
            "pro_layout_parentKeys": Array [
              "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
              "/welcome",
            ],
          },
        ],
        "component": "./Welcome",
        "key": "/welcome",
        "locale": "menu.welcome.one",
        "name": "one",
        "path": "/welcome",
        "pro_layout_parentKeys": Array [
          "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
        ],
      },
    ],
    "icon": "smile",
    "key": "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
    "locale": "menu.welcome",
    "name": "welcome",
    "path": "/",
    "pro_layout_parentKeys": Array [],
  },
  Object {
    "children": Array [
      Object {
        "component": "./Welcome",
        "icon": "smile",
        "key": "/welcome/repertoryFw",
        "locale": "menu.welcome.one.two",
        "name": "two",
        "path": "/welcome/repertoryFw",
        "pro_layout_parentKeys": Array [
          "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
          "/welcome",
        ],
      },
      Object {
        "component": "./Welcome",
        "icon": "smile",
        "key": "/welcome/repertory",
        "locale": "menu.welcome.one.two2",
        "name": "two2",
        "path": "/welcome/repertory",
        "pro_layout_parentKeys": Array [
          "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
          "/welcome",
        ],
      },
    ],
    "component": "./Welcome",
    "key": "/welcome",
    "locale": "menu.welcome.one",
    "name": "one",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [
      "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
    ],
  },
  Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome/repertoryFw",
    "locale": "menu.welcome.one.two",
    "name": "two",
    "path": "/welcome/repertoryFw",
    "pro_layout_parentKeys": Array [
      "/151fdf1e8796d6df8536aeb3261b5603ef6ef574c115c3e82e94e0a49e4561fa",
      "/welcome",
    ],
  },
]
`;

exports[`three path 1`] = `
Array [
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "children": Array [
          Object {
            "access": "canAdmin",
            "exact": true,
            "key": "/admin/sub-page/list",
            "locale": "menu.admin.sub-page.sub-page-list",
            "name": "三级管理页",
            "path": "/admin/sub-page/list",
            "pro_layout_parentKeys": Array [
              "/admin",
              "/admin/sub-page",
            ],
            "unaccessible": false,
          },
        ],
        "exact": true,
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "path": "/admin/sub-page",
        "pro_layout_parentKeys": Array [
          "/admin",
        ],
        "unaccessible": false,
      },
    ],
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
  },
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "exact": true,
        "key": "/admin/sub-page/list",
        "locale": "menu.admin.sub-page.sub-page-list",
        "name": "三级管理页",
        "path": "/admin/sub-page/list",
        "pro_layout_parentKeys": Array [
          "/admin",
          "/admin/sub-page",
        ],
        "unaccessible": false,
      },
    ],
    "exact": true,
    "key": "/admin/sub-page",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "path": "/admin/sub-page",
    "pro_layout_parentKeys": Array [
      "/admin",
    ],
    "unaccessible": false,
  },
  Object {
    "access": "canAdmin",
    "exact": true,
    "key": "/admin/sub-page/list",
    "locale": "menu.admin.sub-page.sub-page-list",
    "name": "三级管理页",
    "path": "/admin/sub-page/list",
    "pro_layout_parentKeys": Array [
      "/admin",
      "/admin/sub-page",
    ],
    "unaccessible": false,
  },
]
`;

exports[`user path test 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "key": "/admin/userMng/users",
        "locale": "menu.人员组织管理.人员管理",
        "name": "人员管理",
        "path": "/admin/userMng/users",
        "pro_layout_parentKeys": Array [
          "/admin/userMng/",
        ],
      },
      Object {
        "key": "/admin/userMng/companies",
        "locale": "menu.人员组织管理.单位管理",
        "name": "单位管理",
        "path": "/admin/userMng/companies",
        "pro_layout_parentKeys": Array [
          "/admin/userMng/",
        ],
      },
    ],
    "key": "/admin/userMng/",
    "locale": "menu.人员组织管理",
    "name": "人员组织管理",
    "path": "/admin/userMng/",
    "pro_layout_parentKeys": Array [],
  },
  Object {
    "key": "/admin/userMng/companies",
    "locale": "menu.人员组织管理.单位管理",
    "name": "单位管理",
    "path": "/admin/userMng/companies",
    "pro_layout_parentKeys": Array [
      "/admin/userMng/",
    ],
  },
]
`;

exports[`var path 1`] = `
Array [
  Object {
    "exact": true,
    "key": "/list/:id",
    "locale": "menu.list.table.result",
    "name": "数据详情",
    "path": "/list/:id",
    "pro_layout_parentKeys": Array [],
    "unaccessible": false,
  },
]
`;
